# discord_news_notify

./: .env_example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  discord-check-list.md  nohup.out
config/: default.example.toml  default.toml
docs/: current-flow.md  hatena-bookmark-threshold-channel-routing.md
src/: config.rs  formatter.rs  google_alert.rs  hatena.rs  main.rs  rss.rs  state.rs
