[package]
name = "discord_news_notify"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rss = "2.0"
twilight = "0.16.0"
twilight-gateway = "0.16.0"
twilight-model = "0.16.0"
twilight-http = "0.16.0"
dotenv = "0.15.0"
